# zamsensordisplay

./: CMakeLists.txt  README.md
lib/: LICENSE
lib/Fonts/: fonts.h  generate-terminus-font.sh  generate-terminus16-font.sh  terminus16.c  terminus19.c
src/: main.c  network.c  network.h  secrets.h.template
